--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:pull": "prisma db pull",
+    "prisma:link": "ln -s ../todo-api/prisma/schema.prisma schema.prisma",
+    "generate": "npx prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.21.8",
+    "@clerk/clerk-react": "^4.22.0",
+    "@clerk/nextjs": "^4.21.14",
+    "@prisma/client": "^4.16.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -21,6 +26,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "prisma": "^4.16.2"
   }
 }
